新增运行时日志和菜品db
